--- a/Chess/CSS/Style.css
+++ b/Chess/CSS/Style.css
@@ -1,4 +1,8 @@
 @media all {
+    *{
+        margin: 0;
+        padding: 0;
+    }
     body {
         height: 100vh;
         background: #222;
@@ -6,24 +10,92 @@
         background-repeat: no-repeat;
     }
 
+    #container{
+        position: relative;
+        margin: 3% auto 0% 0%;
+        align-content: center;
+        /*border: solid 1px white;*/
+        text-align: center;
+        color: white;
+        font-size: 25pt;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    #topScore {
+        float: left;
+        margin:0% 0% 0% 0%;
+        padding: 1% 4% 4% 4%;
+        border: solid 1px white;
+        border-radius: 7px;
+        font-size: 25pt;
+    }
+    #tool-bar{
+        margin: 10% 13% 0 0;
+        float: right;
+        /*border: solid 1px white;*/
+    }
+
+    .tool-bar-item{
+        font-size: 30pt;
+        margin-top: 20%;
+    }
+    #start{
+
+        margin: 50% auto 0% 25%;
+        padding: 25%;
+        text-align: center; 
+        font-size: 20pt;
+        background-image: url('../play\ \(2\).png');
+        background-repeat: no-repeat;
+    }
+
+    #start:hover {
+        border-color: rgb(0, 89, 255);
+        color: rgb(0, 89, 255);
+        background-image: url('../next.png');
+    }
+
+    #replay{
+
+        margin: 20% auto 0% 25%;
+        padding: 25%;
+        text-align: center; 
+        font-size: 18pt;
+        background-image: url('../repeat.png');
+        background-repeat: no-repeat;
+    }
+
+    #replay:hover {
+        border-color: rgb(0, 89, 255);
+        color: rgb(0, 89, 255);
+    }
+
+    .replay {
+        text-decoration: none;
+        color: white;
+    }
+
     .grid-container {
-        margin: 3% 0% 0% 30%;
+        margin: 0% 30% 0% auto;
         width: 650px;
         display: grid;
         grid-template-columns: auto auto auto auto auto auto auto auto;
         /*background-color: #333333;*/
-        padding: 10px;
+        padding: 0px;
         grid-gap: 20px;
     }
 
     .even {
-        /*background-color: rgb(219, 157, 115);*/
+        background-color: rgb(133, 92, 64);
         background-image: url('../Texture_Walnut.png');
+        background-repeat: no-repeat;
     }
 
     .odd {
-       /*background-color: rgb(255, 217, 174);*/
+        background-color: rgb(255, 217, 174);
         background-image: url('../Texture_LighterMaple.png');
+        background-repeat: no-repeat;
+        
     }
 
     .grid-item {
@@ -31,6 +103,7 @@
         height: 60px;
         margin: 0;
         padding: 0;
+        border-radius: 3px;
         text-align: center;
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.062),
             0 3px 5px 0 rgba(0, 0, 0, 0.19);
@@ -40,7 +113,7 @@
         width: 60px;
         height: 60px;
         border-radius: 50px;
-        background-image: url('../pngfuel.com.png');
+        background-image: url('../horse.png');
         background-repeat: no-repeat;
         box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.062),
             0 10px 20px 0 rgba(0, 0, 0, 0.19);
@@ -59,4 +132,5 @@
     .possi:hover {
         background-color: brown;
     }
+
 }
