--- a/Chess/css/Style.css
+++ b/Chess/css/Style.css
@@ -45,14 +45,14 @@
         padding: 25%;
         text-align: center; 
         font-size: 20pt;
-        background-image: url('../images/play\ \(2\).png');
+        background-image: url('./images/play\ \(2\).png');
         background-repeat: no-repeat;
     }
 
     #start:hover {
         border-color: rgb(0, 89, 255);
         color: rgb(0, 89, 255);
-        background-image: url('../images/next.png');
+        background-image: url('./images/next.png');
     }
 
     #replay{
@@ -61,7 +61,7 @@
         padding: 25%;
         text-align: center; 
         font-size: 18pt;
-        background-image: url('../images/repeat.png');
+        background-image: url('./images/repeat.png');
         background-repeat: no-repeat;
     }
 
@@ -87,13 +87,13 @@
 
     .even {
         background-color: rgb(133, 92, 64);
-        background-image: url('../images/Texture_Walnut.png');
+        background-image: url('./images/Texture_Walnut.png');
         background-repeat: no-repeat;
     }
 
     .odd {
         background-color: rgb(255, 217, 174);
-        background-image: url('../images/Texture_LighterMaple.png');
+        background-image: url('./images/Texture_LighterMaple.png');
         background-repeat: no-repeat;
         
     }
@@ -113,7 +113,7 @@
         width: 60px;
         height: 60px;
         border-radius: 50px;
-        background-image: url('../images/horse.png');
+        background-image: url('./images/horse.png');
         background-repeat: no-repeat;
         box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.062),
             0 10px 20px 0 rgba(0, 0, 0, 0.19);
@@ -124,7 +124,7 @@
         width: 60px;
         height: 60px;
         border-radius: 50px;
-        background-image: url('../images/knightPossi.png');
+        background-image: url('./images/knightPossi.png');
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.062),
             0 5px 15px 0 rgba(0, 0, 0, 0.19);
     }
