--- a/css/Style.css
+++ b/css/Style.css
@@ -1,4 +1,4 @@
-@media all {
+/*@media all {*/
     *{
         margin: 0;
         padding: 0;
@@ -130,5 +130,77 @@
     .possi:hover {
         background-color: brown;
     }
+    @media screen and (max-width: 600px) {
 
-}
+        #tool-bar {
+            width: 100%;
+            margin: 0;
+        }
+        .tool-bar-item {
+            display: inline;
+            margin: 0%;
+        }
+        #timer {
+            float: left;
+            margin: 0;
+            margin-top: 3%;
+            padding: 0;
+            padding-top: 0%;
+            margin-left: 35%;
+            font-size: 20pt;
+        }
+
+        #steps{
+            float: right;
+            margin: 0;
+            margin-right: 25%;
+            padding: 0;
+            font-size: 20pt;
+        }
+        #steps img {
+            width: 40px;
+            height: 40px;
+        }
+
+        #start {
+           float: left;
+           background-size: 40px 40px;
+           margin: 0%;
+           margin-right: 50%;
+           margin-top: 3%;
+           padding: 5%;
+        }
+        
+        #replay {
+            float: right;
+            background-size: 40px 40px;
+            margin: 0;
+            margin-top: 3%;
+            padding: 5%;
+            
+        }
+        
+        .grid-container {
+            width: 100%;
+            padding: 0%;
+        }
+        .grid-item{
+            width: 40px;
+            height: 40px;
+        }
+
+        #knight {
+            width: 40px;
+            height: 40px;
+            background-size: contain;
+        }
+
+        .possi {
+            width: 40px;
+            height: 40px;
+            background-size: contain;
+        }
+
+    }
+
+/*}*/
