--- a/css/Style.css
+++ b/css/Style.css
@@ -130,6 +130,7 @@
     .possi:hover {
         background-color: brown;
     }
+
     @media screen and (max-width: 1080px) {
 
         #tool-bar {
@@ -146,7 +147,7 @@
             margin-top: 3%;
             padding: 0;
             padding-top: 0%;
-            margin-left: 35%;
+            margin-left: 27%;
             font-size: 20pt;
         }
 
@@ -167,7 +168,7 @@
            background-size: 40px 40px;
            margin: 0%;
            margin-right: 50%;
-           margin-top: 1%;
+           margin-bottom: 1%;
            padding: 5%;
         }
         
@@ -175,7 +176,7 @@
             float: right;
             background-size: 40px 40px;
             margin: 0;
-            margin-top: 1%;
+            margin-bottom: 1%;
             padding: 5%;
             
         }
