--- a/css/Style.css
+++ b/css/Style.css
@@ -144,7 +144,7 @@
         #timer {
             float: left;
             margin: 0;
-            margin-top: 3%;
+            margin-top: 2%;
             padding: 0;
             padding-top: 0%;
             margin-left: 27%;
@@ -154,27 +154,29 @@
         #steps{
             float: right;
             margin: 0;
+            margin-top: 1%;
             margin-right: 25%;
             padding: 0;
             font-size: 20pt;
         }
         #steps img {
-            width: 40px;
-            height: 40px;
+            width: 30px;
+            height: 30px;
         }
 
         #start {
            float: left;
-           background-size: 40px 40px;
+           background-size: 30px 30px;
            margin: 0%;
            margin-right: 50%;
+           margin-left: 2%;
            margin-bottom: 1%;
            padding: 5%;
         }
         
         #replay {
             float: right;
-            background-size: 40px 40px;
+            background-size: 30px 30px;
             margin: 0;
             margin-bottom: 1%;
             padding: 5%;
@@ -184,26 +186,27 @@
         .grid-container {
             width: 100%;
             padding: 0%;
+            grid-gap: 20px;
         }
 
         .even, .odd {
-            background-size: 40px 40px;
+            background-size: 30px 30px;
             background-size: contain;
         }
         .grid-item{
-            width: 40px;
-            height: 40px;
+            width: 30px;
+            height: 30px;
         }
 
         #knight {
-            width: 40px;
-            height: 40px;
+            width: 30px;
+            height: 30px;
             background-size: contain;
         }
 
         .possi {
-            width: 40px;
-            height: 40px;
+            width: 30px;
+            height: 30px;
             background-size: contain;
         }
 
