--- a/css/Style.css
+++ b/css/Style.css
@@ -184,7 +184,8 @@
         }
         
         .grid-container {
-            width: 100%;
+            width: 90%;
+           margin-left: 5%;
             padding: 0%;
             grid-gap: 20px;
         }
