--- a/css/Style.css
+++ b/css/Style.css
@@ -185,7 +185,8 @@
         
         .grid-container {
             width: 50%;
-           margin-left: 5%;
+            margin-left: 10%;
+            margin-top: 10%;
             padding: 0%;
             grid-gap: 10px;
         }
