--- a/css/Style.css
+++ b/css/Style.css
@@ -187,7 +187,7 @@
         .grid-container {
             width: 50%;
             margin-left: 4%;
-            margin-top: 20%
+            margin-top: 0%;
             padding: 0%;
             grid-gap: 15px;
         }
