--- a/css/Style.css
+++ b/css/Style.css
@@ -144,11 +144,13 @@
         }
         #timer {
             float: left;
+            position: relative;
+            top: 80vh;
             margin: 0;
             margin-top: 2%;
             padding: 0;
             padding-top: 0%;
-            margin-left: 27%;
+            margin-left: 25%;
             font-size: 20pt;
         }
 
