--- a/css/Style.css
+++ b/css/Style.css
@@ -136,6 +136,7 @@
         #tool-bar {
             width: 100%;
             margin: 0;
+            margin-top: 5%;
             margin-bottom: 5%;
         }
         .tool-bar-item {
