--- a/css/Style.css
+++ b/css/Style.css
@@ -8,6 +8,14 @@
        
     }
 
+    #header {
+        position: relative;
+        top: 4vh;
+        left: 25%;
+        color: white;
+        font-size: 30pt;
+    }
+
     #container{
         position: relative;
         margin: 3% auto 0% 0%;
@@ -138,6 +146,7 @@
             margin: 0;
             margin-top: 5%;
             margin-bottom: 5%;
+           border-top: solid 1px white;
         }
         .tool-bar-item {
             display: inline;
