--- a/css/Style.css
+++ b/css/Style.css
@@ -1,16 +1,18 @@
-/*@media all {*/
     *{
         margin: 0;
         padding: 0;
     }
     body {
+        /*height: 100vh;*/
         background: #222;
-       
+        /*background: linear-gradient(#222, #222, #444);
+        background-repeat: no-repeat;*/
     }
 
     #header {
         position: relative;
-        top: 4vh;
+        width: 25%;
+        top: 3vh;
         left: 25%;
         color: white;
         font-size: 30pt;
@@ -36,7 +38,7 @@
         font-size: 25pt;
     }
     #tool-bar{
-        margin: 10% 13% 0 0;
+        margin: 5% 20% 0 0;
         float: right;
         /*border: solid 1px white;*/
     }
@@ -45,13 +47,21 @@
         font-size: 30pt;
         margin-top: 20%;
     }
-    #start{
 
-        margin: 50% auto 0% 25%;
+    #start-container {
+        position: relative;
+        right: 1em;
+        margin-bottom: 17vh;
+    }
+
+    #start{
+        display: inline;
+        margin: 0% 0% 0% 25%;
         padding: 25%;
         text-align: center; 
         font-size: 20pt;
         background-image: url('../images/play\ \(2\).png');
+        background-size: contain;
         background-repeat: no-repeat;
     }
 
@@ -62,12 +72,13 @@
     }
 
     #replay{
-
-        margin: 20% auto 0% 25%;
+        display: inline;
+        margin: 20% auto 70% 25%;
         padding: 25%;
         text-align: center; 
         font-size: 18pt;
         background-image: url('../images/repeat.png');
+        background-size: contain;
         background-repeat: no-repeat;
     }
 
@@ -81,6 +92,10 @@
         color: white;
     }
 
+    #timer {
+        display: block;
+    }
+
     .grid-container {
         margin: 0% 30% 0% auto;
         width: 650px;
@@ -88,7 +103,7 @@
         grid-template-columns: auto auto auto auto auto auto auto auto;
         /*background-color: #333333;*/
         padding: 0px;
-        grid-gap: 20px;
+        grid-gap: 15px;
     }
 
     .even {
@@ -140,13 +155,17 @@
     }
 
     @media screen and (max-width: 1080px) {
+        #header {
+            left: 25%;
+            width: 100%;
+        }
 
         #tool-bar {
             width: 100%;
             margin: 0;
             margin-top: 5%;
             margin-bottom: 5%;
-           border-top: solid 1px white;
+            border-top: solid 1px white;
         }
         .tool-bar-item {
             display: inline;
@@ -158,7 +177,7 @@
             margin-top: 2%;
             padding: 0;
             padding-top: 0%;
-            margin-left: 30%;
+            margin-left: 27%;
             font-size: 20pt;
         }
 
@@ -166,7 +185,7 @@
             float: right;
             margin: 0;
             margin-top: 1%;
-            margin-right: 25%;
+            margin-right: 40%;
             padding: 0;
             font-size: 20pt;
         }
@@ -175,12 +194,17 @@
             height: 30px;
         }
 
+        #start-container {
+            right: 0;
+            margin-bottom: 12%;
+        }
+
         #start {
            float: left;
            background-size: 30px 30px;
            margin: 0%;
-           margin-right: 50%;
-           margin-left: 2%;
+           margin-right: 0%;
+           margin-left: 4%;
            margin-bottom: 1%;
            padding: 5%;
         }
@@ -189,6 +213,7 @@
             float: right;
             background-size: 30px 30px;
             margin: 0;
+            margin-right: 15%;
             margin-bottom: 1%;
             padding: 5%;
             
@@ -196,9 +221,9 @@
         
         .grid-container {
             width: 50%;
+            margin-right: 0;
             margin-left: 4%;
-            margin-top: 0%;
-            padding: 0%;
+            margin-top: 20%;
             grid-gap: 15px;
         }
 
@@ -225,5 +250,3 @@
         }
 
     }
-
-/*}*/
