--- a/css/Style.css
+++ b/css/Style.css
@@ -184,8 +184,8 @@
         #steps{
             float: right;
             margin: 0;
-            margin-top: 1%;
-            margin-right: 40%;
+            margin-top: 0.5%;
+            margin-right: 30%;
             padding: 0;
             font-size: 20pt;
         }
@@ -196,24 +196,27 @@
 
         #start-container {
             right: 0;
-            margin-bottom: 12%;
+            margin-top: 10%;
+            margin-bottom: 5%;
         }
 
         #start {
-           float: left;
-           background-size: 30px 30px;
-           margin: 0%;
-           margin-right: 0%;
-           margin-left: 4%;
-           margin-bottom: 1%;
-           padding: 5%;
+            position: relative;
+            left: 50%;
+            top: 3vh;
+            background-size: 30px 30px;
+            margin: 0%;
+            /*margin-right: 0%;
+            margin-left: 4%;
+            margin-bottom: 1%;*/
+            padding: 5%;
         }
         
         #replay {
             float: right;
             background-size: 30px 30px;
             margin: 0;
-            margin-right: 15%;
+            margin-right: 17%;
             margin-bottom: 1%;
             padding: 5%;
             
