--- a/css/Style.css
+++ b/css/Style.css
@@ -164,7 +164,7 @@
             width: 100%;
             margin: 0;
             margin-top: 5%;
-            margin-bottom: 5%;
+            margin-bottom: 1%;
             border-top: solid 1px white;
         }
         .tool-bar-item {
@@ -174,7 +174,7 @@
         #timer {
             float: left;
             margin: 0;
-            margin-top: 2%;
+            margin-top: 0%;
             padding: 0;
             padding-top: 0%;
             margin-left: 27%;
@@ -182,10 +182,13 @@
         }
 
         #steps{
-            float: right;
+            position: relative;
+            right: 3%;
+            bottom: 1vh;
             margin: 0;
-            margin-top: 0.5%;
-            margin-right: 30%;
+            /*margin-top: 0%;
+            margin-right: 38%;
+            */
             padding: 0;
             font-size: 20pt;
         }
@@ -196,8 +199,9 @@
 
         #start-container {
             right: 0;
-            margin-top: 10%;
-            margin-bottom: 5%;
+            margin-top: 5%;
+            margin-bottom: 0;
+            margin-bottom: 0%;
         }
 
         #start {
