--- a/css/Style.css
+++ b/css/Style.css
@@ -172,6 +172,7 @@
         }
         #timer {
             float: left;
+            width: auto;
             margin: 0;
             margin-top: 0%;
             padding: 0;
