--- a/css/Style.css
+++ b/css/Style.css
@@ -3,10 +3,8 @@
         padding: 0;
     }
     body {
-        /*height: 100vh;*/
         background: #222;
-        /*background: linear-gradient(#222, #222, #444);
-        background-repeat: no-repeat;*/
+
     }
 
     #header {
@@ -16,11 +14,13 @@
         left: 25%;
         color: white;
         font-size: 30pt;
+        font-family: "Times New Roman", Times, serif;
+
     }
 
     #container{
         position: relative;
-        margin: 3% auto 0% 0%;
+        margin: 3% 0% 0% 0%;
         align-content: center;
         /*border: solid 1px white;*/
         text-align: center;
@@ -45,19 +45,12 @@
 
     .tool-bar-item{
         font-size: 30pt;
-        margin-top: 20%;
-    }
-
-    #start-container {
-        position: relative;
-        right: 1em;
-        margin-bottom: 17vh;
     }
 
     #start{
         display: inline;
-        margin: 0% 0% 0% 25%;
-        padding: 25%;
+        margin: 0% 0% 0% 23%;
+        padding: 20%;
         text-align: center; 
         font-size: 20pt;
         background-image: url('../images/play\ \(2\).png');
@@ -71,8 +64,8 @@
 
     #replay{
         display: inline;
-        margin: 20% auto 0% 0%;
-        padding: 25%;
+        margin: 20% auto 0% 10%;
+        padding: 20%;
         text-align: center; 
         font-size: 18pt;
         background-image: url('../images/repeat.png');
@@ -84,6 +77,7 @@
     }
 
     .replay {
+
         text-decoration: none;
         color: white;
     }
@@ -96,8 +90,16 @@
     #timer {
         display: block;
         width: 100%;
-        margin: 80% 0% 50% 10%;
+        margin: 60% 1% 40% 10%;
 
+    }
+    #timer img {
+        width: 40px;
+        height: 40px;
+    }
+
+    #steps {
+        margin-top: 0;
     }
 
     .grid-container {
