--- a/css/smallscreen.css
+++ b/css/smallscreen.css
@@ -1,114 +1,112 @@
-@media screen and (max-width: 1080px) {
-    #header {
-        left: 20%;
-        width: 100%;
-    }
+    @media screen and (max-width: 1080px) {
+        #header {
+            left: 7%;
+            width: 100%;
+        }
 
-    #tool-bar {
-        width: 100%;
-        margin: 0;
-        margin-top: 5%;
-        margin-bottom: 1%;
-        border-top: solid 1px white;
-    }
-    .tool-bar-item {
-        display: inline;
-        margin: 0%;
-    }
-    #timer {
-        float: left;
-        width: auto;
-        margin: 0;
-        margin-top: 0%;
-        padding: 0;
-        padding-top: 4%;
-        margin-left: 27%;
-        font-size: 20pt;
-    }
+        #tool-bar {
+            width: 100%;
+            margin: 0;
+            margin-top: 5%;
+            margin-bottom: 1%;
+            border-top: solid 1px white;
+        }
+        .tool-bar-item {
+            display: inline;
+            margin: 0%;
+        }
+        #timer {
+            float: left;
+            width: auto;
+            margin: 0;
+            margin-top: 0%;
+            padding: 0;
+            padding-top: 4%;
+            margin-left: 27%;
+            font-size: 20pt;
+            vertical-align: middle;
+        }
 
-    #steps{
-        position: relative;
-        right: 0%;
-        left: 7%;
-        top: 3vh;
-        margin: 0;
-        /*margin-top: 0%;
-        margin-right: 38%;
-        */
-        padding: 0;
-        font-size: 20pt;
-    }
-    #steps img {
-        width: 30px;
-        height: 30px;
-    }
+        #timer img {
+            width: 30px;
+            height: 30px;
+        }
 
-    #start-container {
-        right: 0;
-        margin-top: 5%;
-        margin-bottom: 0;
-        margin-bottom: 0%;
-    }
+        #steps{
+            position: relative;
+            right: 0%;
+            left: 7%;
+            top: 3vh;
+            margin: 0;
+            padding: 0;
+            font-size: 20pt;
+        }
+        #steps img {
+            width: 30px;
+            height: 30px;
+        }
 
-    #start {
-        float: left;
-        position: relative;
-        left: 12%;
-        top: 3vh;
-        background-size: 30px 30px;
-        margin: 0%;
-        /*margin-right: 0%;
-        margin-left: 4%;
-        margin-bottom: 1%;*/
-        padding: 5%;
+        #start-container {
+            right: 0;
+            margin-top: 5%;
+            margin-bottom: 0;
+            margin-bottom: 0%;
+        }
+
+        #start {
+            float: left;
+            position: relative;
+            left: 12%;
+            top: 3vh;
+            background-size: 30px 30px;
+            margin: 0%;
+            padding: 5%;
+            
+        }
         
-    }
-    
-    #replay {
-        float: right;
-        right: 87%;
-        top: 3vh;
-        position: relative;
-        margin: 0;
-        background-size: 30px 30px;
-        margin: 0;
-       /* margin-right: 19%;*/
-        margin-bottom: 0%;
-        padding: 5%;
+        #replay {
+            float: right;
+            right: 87%;
+            top: 3vh;
+            position: relative;
+            margin: 0;
+            background-size: 30px 30px;
+            margin: 0;
+            margin-bottom: 0%;
+            padding: 5%;
+            
+        }
         
-    }
-    
-    .grid-container {
-        position: relative;
-        width: 50%;
-        top: 1vh;
-        margin-right: 0;
-        margin-left: 4%;
-        margin-top: 20%;
-        grid-gap: 15px;
-    }
+        .grid-container {
+            position: relative;
+            width: 50%;
+            top: 1vh;
+            margin-right: 0;
+            margin-left: 4%;
+            margin-top: 20%;
+            grid-gap: 15px;
+        }
 
-    .even, .odd {
-        background-size: 30px 30px;
-        background-size: contain;
-        /*background-image: none;*/
-    }
+        .even, .odd {
+            background-size: 30px 30px;
+            background-size: contain;
+        }
 
-    .grid-item{
-        width: 30px;
-        height: 30px;
-    }
+        .grid-item{
+            width: 30px;
+            height: 30px;
+        }
 
-    #knight {
-        width: 30px;
-        height: 30px;
-        background-size: contain;
-    }
+        #knight {
+            width: 30px;
+            height: 30px;
+            background-size: contain;
+        }
 
-    .possi {
-        width: 30px;
-        height: 30px;
-        background-size: contain;
-    }
+        .possi {
+            width: 30px;
+            height: 30px;
+            background-size: contain;
+        }
 
-}
+    }
