--- a/css/smallscreen.css
+++ b/css/smallscreen.css
@@ -1,7 +1,8 @@
     @media screen and (max-width: 1080px) {
         #header {
-            left: 15%;
-            width: 100%;
+            left: 17%;
+            padding: 0;
+            margin: 0;
         }
 
         #tool-bar {
