--- a/css/smallscreen.css
+++ b/css/smallscreen.css
@@ -1,6 +1,7 @@
     @media screen and (max-width: 1080px) {
         #header {
             left: 17%;
+            width: 62%;
             padding: 0;
             margin: 0;
         }
