--- a/css/smallscreen.css
+++ b/css/smallscreen.css
@@ -52,7 +52,7 @@
             float: left;
             top: 4vh;
             bottom: 0vh;
-            left: 1em;
+            left: -.5em;
             margin: 0;
             margin-top: 0%;
             padding: 0;
