--- a/css/smallscreen.css
+++ b/css/smallscreen.css
@@ -1,6 +1,7 @@
     @media screen and (max-width: 1080px) {
         #header {
             left: 17%;
+            width: 100%;
             padding: 0;
             margin: 0;
             font-size: 24pt;
@@ -49,7 +50,7 @@
             float: left;
             top: 4vh;
             bottom: 0vh;
-            left: 1.5em;
+            left: 1em;
             margin: 0;
             margin-top: 0%;
             padding: 0;
@@ -72,8 +73,8 @@
     
         #life-container img {
             position: relative;
-            top: 62vh;
-            left: 2.5em;
+            top: -3vh;
+            left: 1.5em;
             right: 0em;
             vertical-align: middle;
             margin: 0% 0;
@@ -162,10 +163,13 @@
         .grid-container {
             position: relative;
             top: -9vh;
+            width: auto;
             margin-right: 0;
             margin-left: 1%;
             margin-top: 0%;
-            grid-gap: 6px;
+            grid-gap: 10px;
+            background-color: none;
+            box-shadow: none;
         }
 
         .even, .odd {
