--- a/css/smallscreen.css
+++ b/css/smallscreen.css
@@ -166,6 +166,7 @@
         .grid-container {
             position: relative;
             top: -9vh;
+            width: 70%;
             margin-right: 0;
             margin-left: 1%;
             margin-top: 0%;
