--- a/css/smallscreen.css
+++ b/css/smallscreen.css
@@ -186,14 +186,14 @@
         }
 
         #knight {
-            width: 30px;
-            height: 30px;
+            width: 35px;
+            height: 35x;
             background-size: contain;
         }
 
         .possi {
-            width: 30px;
-            height: 30px;
+            width: 35px;
+            height: 35px;
             background-size: contain;
         }
 
