--- a/css/smallscreen.css
+++ b/css/smallscreen.css
@@ -1,10 +1,11 @@
     @media screen and (max-width: 780px) {
         #header {
-            top: 70vh;
-            left: 17%;
+            top: 0vh;
+            left: 25%;
             width: 100%;
             padding: 0;
             margin: 0;
+            margin-bottom: 5%;
             font-size: 24pt;
         }
 
@@ -165,12 +166,12 @@
         
         .grid-container {
             position: relative;
-            top: -9vh;
             width: 70%;
+            top: -9vh;
             margin-right: 0;
             margin-left: 1%;
             margin-top: 0%;
-            grid-gap: 7px;
+            grid-gap: 13px;
             background-color: none;
             box-shadow: none;
         }
@@ -186,8 +187,8 @@
         }
 
         #knight {
-            width: 35px;
-            height: 35x;
+            width: 30px;
+            height: 30px;
             background-size: contain;
         }
 
