--- a/css/smallscreen.css
+++ b/css/smallscreen.css
@@ -6,6 +6,7 @@
             padding: 0;
             margin: 0;
             margin-bottom: 5%;
+            margin-top: 5%;
             font-size: 24pt;
         }
 
